--- a/.github/workflows/nightly.yml
+++ b/.github/workflows/nightly.yml
@@ -59,7 +59,6 @@ jobs:
         run: ./patches/protonprep.sh
 
       - name: Create dir structure
-        working-directory: ./build
         run: mkdir build
 
       - name: Cache ccache
@@ -70,27 +69,27 @@ jobs:
           restore-keys: |
             ccache-proton
       - name: Configure build proton
-        working-directory: ./build/build
-        run: ../../configure.sh --build-name="${{ env.RELEASE_VERSION }}" --enable-ccache
+        working-directory: ./build/
+        run: ../configure.sh --build-name="${{ env.RELEASE_VERSION }}" --enable-ccache
 
       # Build name following convention: Proton-<tag>
       - name: Build proton
-        working-directory: ./build/build
+        working-directory: ./build/
         run: make dist
 
       - name: Rename directory
-        working-directory: ./build/build
+        working-directory: ./build/
         run: mv dist ${{ env.RELEASE_VERSION }}
 
       - name: Archive build
-        working-directory: ./build/build
+        working-directory: ./build/
         run: tar -czvf ${{ env.RELEASE_VERSION }}.tar.gz ${{ env.RELEASE_VERSION }}
 
       - name: Upload binaries to release
         uses: svenstaro/upload-release-action@v2
         with:
           repo_token: ${{ secrets.PROTON_GE_GITHUB_ACTIONS_BUILD }}
-          file: build/build/${{ env.RELEASE_VERSION }}.tar.gz
+          file: build/${{ env.RELEASE_VERSION }}.tar.gz
           file_glob: true
           tag: "${{ env.RELEASE_VERSION }}-Nightly-${{ steps.date.outputs.date }}"
           overwrite: false
