--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -47,7 +47,7 @@ jobs:
         run: sudo apt-get remove -y '*mingw-w64*'
 
       - name: apply patches
-        run: ./patches/protonprep.sh || true
+        run: ./patches/protonprep-valve-staging.sh  || true
 
       - name: Create dir structure
         run: mkdir build
