--- a/.github/workflows/nightly.yml
+++ b/.github/workflows/nightly.yml
@@ -21,8 +21,8 @@ jobs:
 
       - name: Update modules
         run: |
-          git config user.name github-actions
-          git config user.email github-actions@github.com
+          git config --global user.name github-actions
+          git config --global user.email github-actions@github.com
           git submodule update --jobs 10 --remote --recursive --merge dxvk/ protonfixes/ vkd3d-proton/ dxvk-nvapi/
       
       - name: Update wine
