--- a/.github/workflows/nightly.yml
+++ b/.github/workflows/nightly.yml
@@ -23,7 +23,7 @@ jobs:
         run: |
           git config --global user.name github-actions
           git config --global user.email github-actions@github.com
-          git submodule update --jobs 10 --remote --recursive --rebase dxvk/ protonfixes/ vkd3d-proton/ dxvk-nvapi/
+          git submodule update --jobs 10 --remote --recursive dxvk/ protonfixes/ vkd3d-proton/ dxvk-nvapi/
       
       - name: Update wine
         run:  cd wine && git checkout $(git tag --sort=committerdate | tail -1)
