--- a/.github/workflows/nightly.yml
+++ b/.github/workflows/nightly.yml
@@ -23,7 +23,7 @@ jobs:
         run: |
           git config --global user.name github-actions
           git config --global user.email github-actions@github.com
-          git submodule update --jobs 10 --remote --recursive protonfixes/ vkd3d-proton/ dxvk-nvapi/
+          git submodule update --jobs 10 --remote --recursive dxvk/ protonfixes/ vkd3d-proton/ dxvk-nvapi/
       
       - name: Update wine
         run:  cd wine && git checkout $(git tag --sort=committerdate | tail -1)
@@ -36,6 +36,10 @@ jobs:
 
       - name: Install dependencies apt
         run: sudo apt update && sudo apt-get install -y ccache fontforge-nox
+
+      - name: Get latest dxvk-async
+        working-directory: ./patches/dxvk/
+        run: wget https://raw.githubusercontent.com/Sporif/dxvk-async/master/dxvk-async.patch
 
       - name: apply patches
         run: ./patches/protonprep-valve-staging.sh  || true
