--- a/.github/workflows/nightly.yml
+++ b/.github/workflows/nightly.yml
@@ -37,9 +37,9 @@ jobs:
       - name: Install dependencies apt
         run: sudo apt update && sudo apt-get install -y ccache fontforge-nox
 
-      - name: Get latest dxvk-async
+      - name: Delete dxvk-async
         working-directory: ./patches/dxvk/
-        run: wget -O dxvk-async.patch https://raw.githubusercontent.com/Sporif/dxvk-async/master/dxvk-async.patch && ls -la
+        run: rm dxvk-async.patch
 
       - name: apply patches
         run: ./patches/protonprep-valve-staging.sh  || true
