--- a/.github/workflows/nightly.yml
+++ b/.github/workflows/nightly.yml
@@ -41,9 +41,13 @@ jobs:
         working-directory: ./patches/dxvk/
         run: wget -O dxvk-async.patch https://raw.githubusercontent.com/Sporif/dxvk-async/master/dxvk-async.patch
 
-      - name: Delete old patches
+      - name: Delete old patches dxvk
         working-directory: ./patches/dxvk/
         run: rm 2608.patch 2675.patch || true
+
+      - name: Delete old patches vkd3d-proton
+        working-directory: ./patches/vkd3d-proton/
+        run: rm 1155.patch || true
 
       - name: apply patches
         run: ./patches/protonprep-valve-staging.sh  || true
