--- a/.github/workflows/nightly.yml
+++ b/.github/workflows/nightly.yml
@@ -45,9 +45,9 @@ jobs:
         working-directory: ./patches/dxvk/
         run: rm -f 2608.patch 2675.patch
 
-      - name: Delete old patches vkd3d-proton
-        working-directory: ./patches/vkd3d-proton/
-        run: rm -f 1155.patch
+#       - name: Delete old patches vkd3d-proton
+#         working-directory: ./patches/vkd3d-proton/
+#         run: rm -f 1155.patch
 
       - name: apply patches
         run: ./patches/protonprep-valve-staging.sh  || true
