--- a/.github/workflows/nightly.yml
+++ b/.github/workflows/nightly.yml
@@ -37,13 +37,13 @@ jobs:
       - name: Install dependencies apt
         run: sudo apt update && sudo apt-get install -y ccache fontforge-nox
 
-      - name: Get latest dxvk-async patch
-        working-directory: ./patches/dxvk/
-        run: wget -O dxvk-async.patch https://raw.githubusercontent.com/Sporif/dxvk-async/master/dxvk-async.patch
+#       - name: Get latest dxvk-async patch
+#         working-directory: ./patches/dxvk/
+#         run: wget -O dxvk-async.patch https://raw.githubusercontent.com/Sporif/dxvk-async/master/dxvk-async.patch
 
       - name: Delete old patches dxvk
         working-directory: ./patches/dxvk/
-        run: rm -f 2608.patch 2675.patch
+        run: rm -f 2608.patch 2675.patch dxvk-async.patch
 
 #       - name: Delete old patches vkd3d-proton
 #         working-directory: ./patches/vkd3d-proton/
